LDEV-1623: Ordered lists were not showing up in the FCKEditor. Adding a css entry for <OL> seems to fix it.

--- a/lams_central/web/css/defaultHTML.css
+++ b/lams_central/web/css/defaultHTML.css
@@ -120,6 +120,11 @@ ul li {
 	padding-bottom: 5px;
 }
 
+ol {
+	margin-left: 25px;
+	margin-right: 30px;
+}
+
 li.no-list-type  {
 	list-style-type: none;
 }
