--- a/lams_central/web/css/defaultHTML_rtl.css
+++ b/lams_central/web/css/defaultHTML_rtl.css
@@ -116,6 +116,11 @@ ul {
 
 ul li { list-style-type:circle;}
 
+ol {
+	margin-right: 25px;
+	margin-left: 30px;
+}
+
 #page { /*whole layout of page*/
 	margin: 25px auto;
 	width: 707px;
