--- a/lams_central/web/css/defaultHTML_rtl_learner.css
+++ b/lams_central/web/css/defaultHTML_rtl_learner.css
@@ -97,6 +97,13 @@ ul {
 
 ul li { list-style-type:circle;}
 
+ol {
+	margin-right: 25px;
+	margin-left: 30px;
+}
+
+ul li { list-style-type:circle;}
+
 /*layout of the table with the alternate color for the table heading cell */
 table.alternative-color {
  	 width:100%; 
